--- a/News.html
+++ b/News.html
@@ -129,14 +129,14 @@
 			     Industrial News
 				<div id="news" onmouseover="tz()" onmouseout="ks()">
                                      <ul id="p1">
-                                         <li><a href="" style="width: 40px; font-size: 15px;">1这是测试新闻滚动效果</a></li>
-                                         <li><a href="" style="width: 40px; font-size: 15px;">2这是测试新闻滚动效果</a></li>
-                                         <li><a href="" style="width: 40px; font-size: 15px;">3这是测试新闻滚动效果</a></li>
-                                         <li><a href="" style="width: 40px; font-size: 15px;">4这是测试新闻滚动效果</a></li>
-                                         <li><a href="" style="width: 40px; font-size: 15px;">5这是测试新闻滚动效果</a></li>
-                                         <li><a href="" style="width: 40px; font-size: 15px;">6这是测试新闻滚动效果</a></li>
-                                         <li><a href="" style="width: 40px; font-size: 15px;">7这是测试新闻滚动效果</a></li>
-                                         <li><a href="" style="width: 40px; font-size: 15px;">8这是测试新闻滚动效果</a></li>
+                                         <li><a href="" style="width: 50%; font-size: 15px;">1这是测试新闻滚动效果</a></li>
+                                         <li><a href="" style="width: 50%; font-size: 15px;">2这是测试新闻滚动效果</a></li>
+                                         <li><a href="" style="width: 50%; font-size: 15px;">3这是测试新闻滚动效果</a></li>
+                                         <li><a href="" style="width: 50%; font-size: 15px;">4这是测试新闻滚动效果</a></li>
+                                         <li><a href="" style="width: 50%; font-size: 15px;">5这是测试新闻滚动效果</a></li>
+                                         <li><a href="" style="width: 50%; font-size: 15px;">6这是测试新闻滚动效果</a></li>
+                                         <li><a href="" style="width: 50%; font-size: 15px;">7这是测试新闻滚动效果</a></li>
+                                         <li><a href="" style="width: 50%; font-size: 15px;">8这是测试新闻滚动效果</a></li>
                                     </ul>
                                     <ul id="p2">
                                     </ul>
@@ -146,14 +146,14 @@
 	 		     Research News
 	 		         <div id="news1" onmouseover="tz1()" onmouseout="ks1()">
                                       <ul id="p11">
-                                          <li><a href="" style="width: 40px; font-size: 15px;">1这是测试新闻滚动效果</a></li>
-                                          <li><a href="" style="width: 40px; font-size: 15px;">2这是测试新闻滚动效果</a></li>
-                                          <li><a href="" style="width: 40px; font-size: 15px;">3这是测试新闻滚动效果</a></li>
-                                          <li><a href="" style="width: 40px; font-size: 15px;">4这是测试新闻滚动效果</a></li>
-                                          <li><a href="" style="width: 40px; font-size: 15px;">5这是测试新闻滚动效果</a></li>
-                                          <li><a href="" style="width: 40px; font-size: 15px;">6这是测试新闻滚动效果</a></li>
-                                          <li><a href="" style="width: 40px; font-size: 15px;">7这是测试新闻滚动效果</a></li>
-                                          <li><a href="" style="width: 40px; font-size: 15px;">8这是测试新闻滚动效果</a></li>
+                                          <li><a href="" style="width: 50%; font-size: 15px;">1这是测试新闻滚动效果</a></li>
+                                          <li><a href="" style="width: 50%; font-size: 15px;">2这是测试新闻滚动效果</a></li>
+                                          <li><a href="" style="width: 50%; font-size: 15px;">3这是测试新闻滚动效果</a></li>
+                                          <li><a href="" style="width: 50%; font-size: 15px;">4这是测试新闻滚动效果</a></li>
+                                          <li><a href="" style="width: 50%; font-size: 15px;">5这是测试新闻滚动效果</a></li>
+                                          <li><a href="" style="width: 50%; font-size: 15px;">6这是测试新闻滚动效果</a></li>
+                                          <li><a href="" style="width: 50%; font-size: 15px;">7这是测试新闻滚动效果</a></li>
+                                          <li><a href="" style="width: 50%; font-size: 15px;">8这是测试新闻滚动效果</a></li>
                                       </ul>
                                       <ul id="p22">
                                       </ul>
