--- a/News.html
+++ b/News.html
@@ -39,7 +39,7 @@
                        border:none;
           }
          #news{
-                       width:500px;
+                       width:50%;
                        height:200px;
                        margin:20px auto;
                        background-color:#CCC;
@@ -50,7 +50,7 @@
                        line-height:30px;
                   }
           #news1{
-                       width:500px;
+                       width:50%;
                        height:200px;
                        margin:20px auto;
                        background-color:#CCC;
