--- a/contact.html
+++ b/contact.html
@@ -63,7 +63,11 @@
 	.footer2 {
 		text-align:center;
 		margin-top: 10px;
-		}	
+		}
+	.section {
+		text-align:center;
+		margin-top: 10px;
+		}
 	.removeborder{ 
 		border: none
 		}
@@ -123,7 +127,8 @@
                 <div id="theme">
                   <h1 align="center"><strong><font size="10">CONTACT US</font></strong></h1><br>
 		<form  action="https://formspree.io/f/xyylnwvp" method="POST">
-			<table border="0" style="margin:0 auto;">				
+			<table border="0" style="margin:0 auto;">
+				<div class="section">
 				<tr>
 					<td>First name:</td>
 					<td>Last name:</td>
@@ -192,6 +197,7 @@
 							<tr>
 								<td><input type="submit" value="Submit" ></td>
 							</tr>
+				</div>
 				</div>
 			</div>
 		    </div>
