--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
                                 <p style="text-indent:2em ">DFSC have invited a group of professors and researchers in information science to join DFSC, and has been built a series of cooperation with Universities and Enterprises. <br/>					
             			</div>
                             <div class="footer1 removeborder">				  
-				    <p style="text-indent:2em ">In order to promoting mutual discussion in academic research and industrial applications, DFSC organizes and participates in the organization of a series of <a href="Conference.html">conferences</a> in information science. At the same time, DFSC also provides online training <a href="courses.html">courses</a> to cultivate talents in information science.</p>
+				    <p style="text-indent:2em ">In order to promoting mutual discussion in academic research and industrial applications, DFSC organizes and participates in the organization of a series of <a href="Conference.html">conferences</a> in information science. At the same time, DFSC also provides online training <a href="courses.html">camp</a> to cultivate talents in information science.</p>
 		    </div>
 		<div class="footer3 removeborder">
 			<p><a href="contact.html">Contact us</a></p>
