--- a/CSAC-2019.html
+++ b/CSAC-2019.html
@@ -36,7 +36,7 @@
 		}
 	</style>
 </head>
-<body background="image/图片16.jpg">
+<body background="image/会议背景11.jpg">
     <div>
         <header style="min-height: 76px;">
                 <nav id="main-nav" class="navbar navbar-inverse" role="navigation">
