--- a/Member Lin.html
+++ b/Member Lin.html
@@ -78,7 +78,7 @@ date.setTime(date.getTime() - skew)
 
 </script>
 <div id="google_translate_element"></div>    
-<body>
+<body background="image/会议背景11.jpg">
     <div >
         <div id="head">
             <header style="min-height: 76px;">
