--- a/index.html
+++ b/index.html
@@ -120,11 +120,11 @@
                                 <li class="submenu">
 				<a href="Conference.html">Conferences</a>
 				  <ul class="Conferences"><i><em></em></i>
-				         <li ><a href="SHDI Introduction.html">SHDI</a></li>
-					 <li ><a href="SMPC Introduction.html">SMPC</a></li>
-					<li ><a href="QPQC Introduction.html">QPQC</a></li>
-					<li ><a href="CSAC Introduction.html">CSAC</a></li>
-					<li ><a href="CC Introduction.html">CC</a></li>
+				         <li style="vertical-align:middle;"><a href="SHDI Introduction.html">SHDI</a></li>
+					 <li style="vertical-align:middle;"><a href="SMPC Introduction.html">SMPC</a></li>
+					<li style="vertical-align:middle;"><a href="QPQC Introduction.html">QPQC</a></li>
+					<li style="vertical-align:middle;"><a href="CSAC Introduction.html">CSAC</a></li>
+					<li style="vertical-align:middle;"><a href="CC Introduction.html">CC</a></li>
 				</ul>
 			</li>
                                  <li class="submenu">
