--- a/2020-Training-plan.html
+++ b/2020-Training-plan.html
@@ -28,6 +28,9 @@
 			/* 		border-color:skyblue; */
 					text-align: justify;
 				}
+			       .removeborder{ 
+		                        border: none
+		                }
 		</style>
 	</head>
 	<body>
