--- a/Conference.html
+++ b/Conference.html
@@ -33,6 +33,9 @@
 	.navbar-collapse li:hover ul{
 			display:block;
 		}	
+	.section{
+		margin-bottom: 30px;
+		}
 	.section1 {
 	        background-color:aliceblue;	     
 	        color:black;
@@ -142,8 +145,10 @@
 
             <div id = "introdution">
             <div class="introdution">
-                <div id="theme">		
+                <div id="theme">	
+		<div class="section">
                     <p style="text-align: center;font-size: 20px">Conferences</p>
+		</div>
 <!--                      <hr> -->
 		      <div class="section1 removeborder">
                      <p style="text-indent:2em ">With rapid development of information science, especially Interdisciplinary development, it is very important for experts in different fields to discuss with each other around the world.<br/>
