--- a/News.html
+++ b/News.html
@@ -70,13 +70,13 @@
          #news1 li{
                        line-height:30px;
                   }
-		#section{
-			width:300px;
+	#section{
+			width:400px;
 			height:200px;
 			margin:30px 5px;
 			background-color:#CCC;
 			border:#039 solid 1px;
-			overflow:hidden;
+			overflow:auto;
 		}
         .footer1{
 		       margin-top: 60px;	
@@ -171,6 +171,11 @@
 							<li><a href="" style="width: 50%; font-size: 15px;">4这里是新闻列表</a></li>
 							<li><a href="" style="width: 50%; font-size: 15px;">5这里是新闻列表</a></li>
 							<li><a href="" style="width: 50%; font-size: 15px;">6这里是新闻列表</a></li>
+							<li><a href="" style="width: 50%; font-size: 15px;">7这里是新闻列表</a></li>
+							<li><a href="" style="width: 50%; font-size: 15px;">8这里是新闻列表</a></li>
+							<li><a href="" style="width: 50%; font-size: 15px;">9这里是新闻列表</a></li>
+							<li><a href="" style="width: 50%; font-size: 15px;">10这里是新闻列表</a></li>
+							<li><a href="" style="width: 50%; font-size: 15px;">11这里是新闻列表</a></li>
 							</ul>
 							<ul id="p21">
 							</ul>
@@ -243,20 +248,20 @@ var p12=document.getElementById("p12");
 var p21=document.getElementById("p21");
 p21.innerHTML=p12.innerHTML;
 //alert(n.offsetHeight+" 1  "+p1.offsetHeight);
-var f2=function(){
-    n2.scrollTop++;
-    if(n2.scrollTop>=p12.offsetHeight){
-        //alert(n.scrollTop+" 1  "+p1.offsetHeight);
-        n2.scrollTop=0;
-    }
-}
-var i2=setInterval(f2,20);
-var tz2=function(){
-    clearInterval(i2);
-}
-var ks2=function(){
-    i2=setInterval(f2,20);
-}
+// var f2=function(){
+//     n2.scrollTop++;
+//     if(n2.scrollTop>=p12.offsetHeight){
+//         //alert(n.scrollTop+" 1  "+p1.offsetHeight);
+//         n2.scrollTop=0;
+//     }
+// }
+// var i2=setInterval(f2,20);
+// var tz2=function(){
+//     clearInterval(i2);
+// }
+// var ks2=function(){
+//     i2=setInterval(f2,20);
+// }
 </script>
 	 </td>
 </tr>	
