--- a/News.html
+++ b/News.html
@@ -72,7 +72,7 @@
                   }
 	#section{
 			width:400px;
-			height:200px;
+			height:490px;
 			margin:30px 30px;
 			background-color:#CCC;
 			border:#039 solid 1px;
@@ -161,8 +161,8 @@
                                     </ul>
                                </div>                 
 	                </td>
-	                <td>
-						<p>新闻列表</p>
+	                <td rowspan="2">
+						<p>News List</p>
 						<div id="section" onmouseover="tz2()" onmouseout="ks2()">
 							<ul id="p12">
 							<li><a href="" style="width: 50%; font-size: 15px;">1这里是新闻列表</a></li>
