--- a/courses.html
+++ b/courses.html
@@ -156,7 +156,7 @@
                     <p style="text-indent:2em ">*Differential Privacy, Implementation and Application-DPLA</a><br/>
                     <p style="text-indent:2em ">*Secure Multi-party Computation, Implementation and Application-SMC</a><br/>
                     <p style="text-indent:2em ">*Lattice-based Cryptography, Implementation and Application (Post-Quantum Cryptography)-LBC</a><br/>
-		    <p style="text-indent:2em "><a href="2020-Training-plan.html">2020 Training Plan</a>, <a href="2021 Training Plan.html">2021 Training Plan</a>, <a href="2022 Training Plan.html">2022 Training Plan</a><br/>
+		    <p style="text-indent:2em "><a href="The-Spring-Training-Camp.html">2020 Training Plan</a>, <a href="2021 Training Plan.html">2021 Training Plan</a>, <a href="2022 Training Plan.html">2022 Training Plan</a><br/>
 		    </div> 
 <!-- 			    <hr> -->
 		    <div class="footer1 removeborder">
@@ -164,7 +164,7 @@
                     <p style="text-indent:2em ">*AI, Implementation, Application and Security-AIAS</a><br/> 
                     <p style="text-indent:2em ">*Blockchains, Implementation, Application and Security-BIAS</a><br/> 
 	            <p style="text-indent:2em ">*Secure and Privacy-preserving Computation, Implementation and Application-SPC</a><br/> 
-	            <p style="text-indent:2em "><a href="2020-Training-plan.html">2020 Training Plan</a>, <a href="2021 Training Plan.html">2021 Training Plan</a>, <a href="2022 Training Plan.html">2022 Training Plan</a><br/> 
+	            <p style="text-indent:2em "><a href="The-Summer-Training-Camp.html">2020 Training Plan</a>, <a href="2021 Training Plan.html">2021 Training Plan</a>, <a href="2022 Training Plan.html">2022 Training Plan</a><br/> 
                     <!-- <p style="text-indent:2em ">*Trusted Computing<br/>  -->
 		    </div>
 <!-- 			    <hr> -->
@@ -173,7 +173,7 @@
                     <p style="text-indent:2em ">*Advanced Topics in Cryptography, Implementation and Application-ATC</a><br/>
                     <p style="text-indent:2em ">*Fully Homomorphic Encryption, Implementation and Application-FHE</a><br/>
                     <p style="text-indent:2em ">*IoT, Implementation and Application-IoT</a><br/>
-                    <p style="text-indent:2em "><a href="2020-Training-plan.html">2020 Training Plan</a>, <a href="2021 Training Plan.html">2021 Training Plan</a>, <a href="2022 Training Plan.html">2022 Training Plan</a><br/>
+                    <p style="text-indent:2em "><a href="The-Winter-Training-Camp.html">2020 Training Plan</a>, <a href="2021 Training Plan.html">2021 Training Plan</a>, <a href="2022 Training Plan.html">2022 Training Plan</a><br/>
 		    </div>
                     <div class="footer3 removeborder">
 			    <p><a href="contact.html">Contact us</a></p>
