--- a/News.html
+++ b/News.html
@@ -73,7 +73,7 @@
 	#section{
 			width:400px;
 			height:490px;
-			margin:30px 30px;
+			margin:20px 30px;
 			background-color:#CCC;
 			border:#039 solid 1px;
 			overflow:auto;
@@ -162,7 +162,7 @@
                                </div>                 
 	                </td>
 	                <td rowspan="2">
-						<p>News List</p>
+						<p style="margin: 0 30px;">News List</p>
 						<div id="section" onmouseover="tz2()" onmouseout="ks2()">
 							<ul id="p12">
 							<li><a href="" style="width: 50%; font-size: 15px;">1这里是新闻列表</a></li>
