--- a/News.html
+++ b/News.html
@@ -257,7 +257,7 @@ var ks1=function(){
 var n2=document.getElementById("section");
 var p12=document.getElementById("p12");
 var p21=document.getElementById("p21");
-p21.innerHTML=p12.innerHTML;
+// p21.innerHTML=p12.innerHTML;
 //alert(n.offsetHeight+" 1  "+p1.offsetHeight);
 // var f2=function(){
 //     n2.scrollTop++;
