--- a/News.html
+++ b/News.html
@@ -42,7 +42,7 @@
 		  	/* width: 300px;
 		  	height:150px; */
 		  	border: 0;
-		  	margin-left:20%;
+/* 		  	margin-left:20%; */
 		  	font-family:宋体;
 		  	color:forestgreen;
 		  	font-size:18px;
