--- a/News.html
+++ b/News.html
@@ -50,7 +50,7 @@
          #news{
                        width:300px;
                        height:200px;
-                       margin:30px 30px;
+                       margin:40px;
                        background-color:#CCC;
                        border:#039 solid 1px;
                        overflow:hidden;
@@ -62,7 +62,7 @@
           #news1{
                        width:300px;
                        height:200px;
-                       margin:30px 30px;
+                       margin:40px;
                        background-color:#CCC;
                        border:#039 solid 1px;
                        overflow:hidden;
@@ -73,7 +73,7 @@
 	#section{
 			width:400px;
 			height:490px;
-			margin:30px 30px;
+			margin:30px 350px;
 			background-color:#CCC;
 			border:#039 solid 1px;
 			overflow:auto;
@@ -145,7 +145,7 @@
 					<table>
                      <tr>
 			<td>
-			     <p>Industrial News</p>
+			     <p style="margin: 0 30px;">Industrial News</p>
 				<div id="news" onmouseover="tz()" onmouseout="ks()">
                                      <ul id="p1">
                                          <li><a href="" style="width: 50%; font-size: 15px;">1这是测试新闻滚动效果</a></li>
@@ -162,7 +162,7 @@
                                </div>                 
 	                </td>
 	                <td rowspan="2">
-						<p style="margin: 0 30px;">News List</p>
+						<p style="margin: 0 350px;">News List</p>
 						<div id="section" onmouseover="tz2()" onmouseout="ks2()">
 							<ul id="p12">
 							<li><a href="" style="width: 50%; font-size: 15px;">1这里是新闻列表</a></li>
@@ -195,7 +195,7 @@
 							</tr>
 							<tr>
 								<td>
-									<p>Research News</p>
+									<p style="margin: 0 30px;">Research News</p>
 									    <div id="news1" onmouseover="tz1()" onmouseout="ks1()">
 									                     <ul id="p11">
 									                         <li><a href="" style="width: 50%; font-size: 15px;">1这是测试新闻滚动效果</a></li>
