--- a/PQC syllabus.html
+++ b/PQC syllabus.html
@@ -79,7 +79,7 @@ date.setTime(date.getTime() - skew)
 
 </script>
 <div id="google_translate_element"></div>    
-<body>
+<body background="Training%20Camp图片.png">
     <div >
         <div id="head">
             <header style="min-height: 76px;">
