--- a/AI syllabus.html
+++ b/AI syllabus.html
@@ -78,7 +78,7 @@ date.setTime(date.getTime() - skew)
 
 </script>
 <div id="google_translate_element"></div>    
-<body background="Training%20Camp图片.png">
+<body background="image/Training%20Camp图片.png">
     <div >
         <div id="head">
             <header style="min-height: 76px;">
