--- a/CC Introduction.html
+++ b/CC Introduction.html
@@ -31,7 +31,7 @@
 	.navbar-collapse li:hover ul{
 			display:block;
 		}
-	#footer {
+	.footer {
 	        background-color:skyblue;
 	        color:white;
 	        clear:both;
@@ -41,6 +41,9 @@
 		border-radius: 20px;
 		border-color: skyblue;
 	}
+	.removeborder{ 
+		         border: none;
+		     }
 	</style>
 
 </head>
@@ -97,7 +100,7 @@
                     &nbsp; &nbsp; &nbsp; &nbsp;<br/>
                     &nbsp; &nbsp; &nbsp; &nbsp;<br/>
 		    </p>
-		  <div id="footer">
+		  <div class="footer removeorder">
 	          <p>
                     &nbsp; &nbsp; &nbsp; &nbsp;<a href="CC-2018.html">CC Symposium-2018</a> <br/>
                     &nbsp; &nbsp; &nbsp; &nbsp;<a href="CC-2019.html">CC Symposium-2019</a> <br/>
