--- a/CSAC Introduction.html
+++ b/CSAC Introduction.html
@@ -31,7 +31,7 @@
 	.navbar-collapse li:hover ul{
 			display:block;
 		}
-	#footer {
+	.footer {
 	         background-color:skyblue;
 	         color:white;
 	         clear:both;
@@ -41,6 +41,9 @@
 		 border-radius: 20px;
 		border-color: skyblue;
 	}
+	.removeborder{ 
+		         border: none;
+		     }
 	</style>
 </head>
 <body background="image/会议背景11.jpg">
@@ -97,7 +100,7 @@
                     &nbsp; &nbsp; &nbsp; &nbsp;<br/>
                     &nbsp; &nbsp; &nbsp; &nbsp;<br/>
 		 </p>
-		<div id="footer">
+		<div class="footer removeborder">
 		  <p>
                     &nbsp; &nbsp; &nbsp; &nbsp;<a href="CSAC-2020.html">CSAC Conference-2020</a> <br/>
                     &nbsp; &nbsp; &nbsp; &nbsp;<a href="CSAC-2019.html">CSAC Conference-2019</a> <br/>
