--- a/QPQC Introduction.html
+++ b/QPQC Introduction.html
@@ -31,7 +31,7 @@
 		.navbar-collapse li:hover ul{
 			display:block;
 		}
-		#footer {
+		.footer {
 	                background-color:skyblue;
 	                color:black;
 	                clear:both;
@@ -41,6 +41,9 @@
 		        border-radius: 20px;
 			border-color: skyblue;
 	       }
+		.removeborder{ 
+		         border: none;
+		     }
 	</style>
 </head>
 <body background="image/会议背景11.jpg">
@@ -96,7 +99,7 @@
                     &nbsp; &nbsp; &nbsp; &nbsp;<br/>
                     &nbsp; &nbsp; &nbsp; &nbsp;<br/>
 		</p>
-		  <div id="footer">
+		  <div class="footer removeborder">
                      &nbsp; &nbsp; &nbsp; &nbsp;<a href="QPQC-2016.html">QPQC Symposiu-2016</a> <br/>
                     &nbsp; &nbsp; &nbsp; &nbsp;<a href="QPQC-2017.html">QPQC Symposiu-2017</a> <br/>
                     &nbsp; &nbsp; &nbsp; &nbsp;<a href="QPQC-2018.html">QPQC Symposiu-2018</a> <br/>
