--- a/SMPC Introduction.html
+++ b/SMPC Introduction.html
@@ -31,7 +31,7 @@
 	.navbar-collapse li:hover ul{
 			display:block;
 		}
-	#footer {
+	.footer {
 	               background-color:skyblue;
 	               color:black;
 	               clear:both;
@@ -40,7 +40,10 @@
 		       border-style: groove;		       
 		       border-radius: 20px;
 		       border-color: skyblue;
-	}
+		}
+	.removeborder{ 
+		border: none
+		}
 	</style>
 
 </head>
@@ -94,7 +97,7 @@
                        <p style="text-align:center"><img alt="安全多方计算国际论坛-2019" src="image/logo.png"  style="width: 210px; height: 213px; " ></a> <br/>
                 <p style="text-indent:2em ">Security multi-party computation is an important method to protect privacy of users, and is research hot. SMPC symposium would like to invite the well-known researchers all over the world to share their works about smpc theory and applications. Everyone, who does the best works on SMPC, will be invited to attend SMPC symposium, and present their works. We would like to provid tranvel funding for the invited speakers.<br/>
                     &nbsp; &nbsp; &nbsp; &nbsp; Invited talks including the following aspects: (1) SMPC theory and developments; (2) SMPC in post-quantum world; (3) Quantum SPMC; (4) SMPC applications.<br/>
-                    <div id="footer">
+                    <div class="footer removeborder">
 		    &nbsp; &nbsp; &nbsp; &nbsp;<a href="SMPC-2017.html">SMPC Symposium-2017</a> <br/>
                     &nbsp; &nbsp; &nbsp; &nbsp;<a href="SMPC-2018.html">SMPC Symposium-2018</a> <br/>
                     &nbsp; &nbsp; &nbsp; &nbsp;<a href="SMPC-2019.html">SMPC Symposium-2019</a> <br/>
