--- a/CC Introduction.html
+++ b/CC Introduction.html
@@ -100,7 +100,7 @@
                     &nbsp; &nbsp; &nbsp; &nbsp;<br/>
                     &nbsp; &nbsp; &nbsp; &nbsp;<br/>
 		    </p>
-		  <div class="footer removeorder">
+		  <div class="footer removeborder">
 	          <p>
                     &nbsp; &nbsp; &nbsp; &nbsp;<a href="CC-2018.html">CC Symposium-2018</a> <br/>
                     &nbsp; &nbsp; &nbsp; &nbsp;<a href="CC-2019.html">CC Symposium-2019</a> <br/>
