--- a/The-Winter-Training-Camp.html
+++ b/The-Winter-Training-Camp.html
@@ -45,6 +45,12 @@
 		text-align: justify;
 /* 		border-color: skyblue; */
 	}
+	.footer1{
+		margin-top: 60px;	
+		}
+	 .footer2{
+		margin-top: 10px;	
+		}
 	.removeborder{ 
 		border: none
 		}
@@ -106,6 +112,12 @@
           <p style="text-indent:2em ">*Advanced Topics in Cryptography (密码前沿课程)<a href="ATC syllabus.html">Syllabus of Advanced Topics in Cryptography (课程安排)</a> <a href="image/ATC Training Course Registration Form-培训课程注册登记表.doc" download="ATC Training Course Registration Form-培训课程注册登记表.doc">Registration Form(注册表)</a> <br/>
           <p style="text-indent:2em ">*Fully Homomorphic Encryption and Implementation (全同态加密及其应用课程)<a href="FHE syllabus.html">FHE Syllabus(课程安排)</a> <a href="image/FHE Training Course Registration Form-培训课程注册登记表.doc" download="FHE Training Course Registration Form-培训课程注册登记表.doc">Registration Form(注册登记表)</a><br/>
                   </div>
+	<div class="footer1 removeborder">
+                <p style="text-align:center"><img  src="image/DFSC CENTERlogo.png " style="width:18%; height:18%;" height:80px;></a> <br/>
+		</div>
+		<div class="footer2 removeborder">
+                <p style="text-align:center"><strong>©2016 DFSC Center</strong></a><br/>
+		</div>
         </div>
 <script type="text/javascript">
 function googleTranslateElementInit() {
