--- a/The-Spring-Training-Camp.html
+++ b/The-Spring-Training-Camp.html
@@ -33,6 +33,8 @@
 	.navbar-collapse li:hover ul{
 			display:block;
 		}
+	.section{
+		}
 	.section1 {
 	        background-color:aliceblue;
 	        color:black;
