--- a/Contact us.html
+++ b/Contact us.html
@@ -9,8 +9,8 @@
 		<form  action="https://formspree.io/f/xyylnwvp" method="POST">
 			<table border="0" style="margin:0 auto;">				
 				<tr>
-					<td>Firstname:</td>
-					<td>Lastname:</td>
+					<td>First name (名):</td>
+					<td>Last name (姓):</td>
 				</tr>
 				<tr>
 					<td><input type="text" name="Firstname" style="width: 160px;height: 20px;"></td>
@@ -21,11 +21,11 @@
 							</tr>
 							<tr>
 								<td colspan=2 >
-									<input type="text" name="Company Email" style="width: 600px;height: 20px;">
+									<input type="text" name="Company Email (邮箱)" style="width: 600px;height: 20px;">
 								</td>
 							</tr>
 							<tr>
-								<td>Company/University name</td>
+								<td>Company/University name (单位名称)</td>
 							</tr>
 							<tr>
 								<td colspan="2">
@@ -33,7 +33,7 @@
 								</td>
 							</tr>
 							<tr>
-								<td>Social unified credit code/Taxi number</td>
+								<td>Social unified credit code/Taxi number (社会统一信用代码/税号)</td>
 							</tr>
 							<tr>
 								<td colspan="2">
@@ -41,38 +41,13 @@
 								</td>
 							</tr>						
 							<tr>
-								<td>Message (Conference/train camp name)</td>
+								<td>Message (Conference/train camp name) 参加会议/训练营)</td>
 							</tr>
 							<tr >
 								<td colspan="2" >
 									<textarea rows="8" cols="88"></textarea>
 								</td>
-							</tr>                           
-							<tr>
-								<td colspan="2" style="width: 600px;">					
-									DFSC Center is committed to protecting and respecting your privacy, and we’ll only use your personal information to administer your account and to provide the products and services you requested from us. From time to time, we would like to contact you about our products and services, as well as other content that may be of interest to you. If you consent to us contacting you for this purpose, please tick below to say how you would like us to contact you:
-								</td>
-							</tr>
-							<tr>
-								<td colspan="2" style="width:600px;">
-									<label for="huiyuan"></label><input type="checkbox" name="huiyuan" id="huiyuan">I agree to receive other communications from DFSC Center.
-								</td>
-							</tr>
-							<tr>
-							<td colspan="2" style="width: 600px;">
-								In order to provide you the content requested, we need to store and process your personal data. If you consent to us storing your personal data for this purpose, please tick the checkbox below.
-							</td>
-							</tr>
-							<tr>
-								<td colspan="2" style="width: 600px;">
-									<label for="huiyuan"></label><input type="checkbox" name="huiyuan" id="huiyuan">I agree to allow DFSC Center to store and process my personal data.
-								</td>
-							</tr>
-							<tr>
-							<td colspan="2" style="width: 600px;">
-								You can unsubscribe from these communications at any time. For more information on how to unsubscribe, our privacy practices, and how we are committed to protecting and respecting your privacy, please review our Privacy Policy.
-							</td>
-							</tr>
+							</tr>                           						
 							<tr>
 								<td><input type="submit" value="Submit" ></td>
 							</tr>
