--- a/The-Spring-Training-Camp.html
+++ b/The-Spring-Training-Camp.html
@@ -53,6 +53,9 @@
 	 .footer2{
 		margin-top: 10px;	
 		}
+	.footer3{
+		margin-top: 15px;	
+		}
 	.removeborder{ 
 		border: none
 		}
@@ -115,6 +118,9 @@
 		    <p style="text-indent:2em ">*Secure Multi-party Computation and Implementation (安全多方计算及其应用课程)<a href="SMPC syllabus.html">SMPC Syllabus(课程安排)</a> <a href="image/SMPC Training Course Registration Form-培训课程注册登记表.doc" download="SMPC Training Course Registration Form-培训课程注册登记表.doc">Registration Form(注册登记表)</a><br/>
                     <p style="text-indent:2em ">*Lattice-based Cryptography and Implementation (格密码课程)<a href="PQC syllabus.html">PQC syllabus(课程安排)</a> <a href="image/PQC Training Course Registration Form-培训课程注册登记表.doc" download="PQC Training Course Registration Form-培训课程注册登记表.doc">Registration Form(注册登记表)</a><br/>
 		    </div>
+			<div class="footer3 removeborder">
+			<p><a href="Contact%20us.html">Contact us</a></p>
+			</div>
 		<div class="footer1 removeborder">
                 <p style="text-align:center"><img  src="image/DFSC CENTERlogo.png " style="width:18%; height:18%;" height:80px;></a> <br/>
 		</div>
