--- a/The-Summer-Training-Camp.html
+++ b/The-Summer-Training-Camp.html
@@ -51,6 +51,9 @@
 	 .footer2{
 		margin-top: 10px;	
 		}
+	.footer3{
+		margin-top: 15px;	
+		}
 	.removeborder{ 
 		border: none
 		}
@@ -112,7 +115,10 @@
                     <p style="text-indent:2em ">*AI and Security (人工智能与安全课程)<a href="AI syllabus.html">AI and Security Syllabus(课程安排)</a> <a href="image/AIS Training Course Registration Form-培训课程注册登记表.doc" download="AIS Training Course Registration Form-培训课程注册登记表.doc">Registration Form(注册登记表)</a><br/>
 		    <p style="text-indent:2em ">*Blockchains and Applications (区块链及其应用课程)<a href="BL syllabus.html">Syllabus of Blockchains and Cryptocurrencies (课程安排)</a> <a href="image/BL Training Course Registration Form-培训课程注册登记表.doc" download="BL Training Course Registration Form-培训课程注册登记表.doc">Registration Form(注册表)</a><br/>
 		    <p style="text-indent:2em ">*Secure Computation (安全计算课程) <a href="SC syllabus.html">Syllabus of Secure Computation (课程安排)</a> <a href="image/SC Training Course Registration Form-培训课程注册登记表.doc" download="SC Training Course Registration Form-培训课程注册登记表.doc">Registration Form(注册表)</a><br/>
-                    </div>			
+                    </div>	
+			<div class="footer3 removeborder">
+			<p><a href="Contact%20us.html">Contact us</a></p>
+			</div>
 			<div class="footer1 removeborder">
                 <p style="text-align:center"><img  src="image/DFSC CENTERlogo.png " style="width:18%; height:18%;" height:80px;></a> <br/>
 		</div>
