--- a/The-Spring-Training-Camp.html
+++ b/The-Spring-Training-Camp.html
@@ -119,7 +119,7 @@
                     <p style="text-indent:2em ">*Lattice-based Cryptography and Implementation (格密码课程)<a href="PQC syllabus.html">PQC syllabus(课程安排)</a> <a href="image/PQC Training Course Registration Form-培训课程注册登记表.doc" download="PQC Training Course Registration Form-培训课程注册登记表.doc">Registration Form(注册登记表)</a><br/>
 		    </div>
 			<div class="footer3 removeborder">
-			<p><a href="Contact%20us.html">Contact us</a></p>
+			<p><a href="Register.html">Register</a></p>
 			</div>
 		<div class="footer1 removeborder">
                 <p style="text-align:center"><img  src="image/DFSC CENTERlogo.png " style="width:18%; height:18%;" height:80px;></a> <br/>
