--- a/The-Summer-Training-Camp.html
+++ b/The-Summer-Training-Camp.html
@@ -117,7 +117,7 @@
 		    <p style="text-indent:2em ">*Secure Computation (安全计算课程) <a href="SC syllabus.html">Syllabus of Secure Computation (课程安排)</a> <a href="image/SC Training Course Registration Form-培训课程注册登记表.doc" download="SC Training Course Registration Form-培训课程注册登记表.doc">Registration Form(注册表)</a><br/>
                     </div>	
 			<div class="footer3 removeborder">
-			<p><a href="Contact%20us.html">Contact us</a></p>
+			<p><a href="Register.html">Register</a></p>
 			</div>
 			<div class="footer1 removeborder">
                 <p style="text-align:center"><img  src="image/DFSC CENTERlogo.png " style="width:18%; height:18%;" height:80px;></a> <br/>
