--- a/The-Winter-Training-Camp.html
+++ b/The-Winter-Training-Camp.html
@@ -116,7 +116,7 @@
           <p style="text-indent:2em ">*Fully Homomorphic Encryption and Implementation (全同态加密及其应用课程)<a href="FHE syllabus.html">FHE Syllabus(课程安排)</a> <a href="image/FHE Training Course Registration Form-培训课程注册登记表.doc" download="FHE Training Course Registration Form-培训课程注册登记表.doc">Registration Form(注册登记表)</a><br/>
                   </div>
 	<div class="footer3 removeborder">
-			<p><a href="Contact%20us.html">Contact us</a></p>
+			<p><a href="Register.html">Register</a></p>
 			</div>	
 	<div class="footer1 removeborder">
                 <p style="text-align:center"><img  src="image/DFSC CENTERlogo.png " style="width:18%; height:18%;" height:80px;></a> <br/>
