--- a/The-Spring-Training-Camp.html
+++ b/The-Spring-Training-Camp.html
@@ -114,12 +114,13 @@
             <div class="introdution">
                 <div id="theme">                    
 		    <div class="section1 removeborder">			                  
-                    <p style="text-indent:2em ">*Differential Privacy (差分隐私及其应用课程) <a href="DP syllabus.html">Syllabus of Differential Privacy and Applications(课程安排)</a> <a href="image/DP Training Course Registration Form-培训课程注册登记表.doc" download="DP Training Course Registration Form-培训课程注册登记表.doc">Registration Form(注册表)</a><br/> 
-		    <p style="text-indent:2em ">*Secure Multi-party Computation and Implementation (安全多方计算及其应用课程)<a href="SMPC syllabus.html">SMPC Syllabus(课程安排)</a> <a href="image/SMPC Training Course Registration Form-培训课程注册登记表.doc" download="SMPC Training Course Registration Form-培训课程注册登记表.doc">Registration Form(注册登记表)</a><br/>
-                    <p style="text-indent:2em ">*Lattice-based Cryptography and Implementation (格密码课程)<a href="PQC syllabus.html">PQC syllabus(课程安排)</a> <a href="image/PQC Training Course Registration Form-培训课程注册登记表.doc" download="PQC Training Course Registration Form-培训课程注册登记表.doc">Registration Form(注册登记表)</a><br/>
+                    <p style="text-indent:2em ">*Differential Privacy, Implementation and Application-DPLA <a href="DP syllabus.html">Syllabus of Differential Privacy and Applications(课程安排)</a> <a href="image/DP Training Course Registration Form-培训课程注册登记表.doc" download="DP Training Course Registration Form-培训课程注册登记表.doc">Registration Form(注册表)</a><br/> 
+		    <p style="text-indent:2em ">*Secure Multi-party Computation, Implementation and Application-SMC <a href="SMPC syllabus.html">SMPC Syllabus(课程安排)</a> <a href="image/SMPC Training Course Registration Form-培训课程注册登记表.doc" download="SMPC Training Course Registration Form-培训课程注册登记表.doc">Registration Form(注册登记表)</a><br/>
+                    <p style="text-indent:2em ">*Lattice-based Cryptography, Implementation and Application (Post-Quantum Cryptography)-LBC <a href="PQC syllabus.html">PQC syllabus(课程安排)</a> <a href="image/PQC Training Course Registration Form-培训课程注册登记表.doc" download="PQC Training Course Registration Form-培训课程注册登记表.doc">Registration Form(注册登记表)</a><br/>
 		    </div>
 		    <div class="footer1 removeborder">
 			<p><a href="Register.html">Register</a></p>
+			<p><a href="">Registration Form</a></p>
 		  </div>
 		<div class="footer2 removeborder">
                 <p style="text-align:center"><img  src="image/DFSC CENTERlogo.png " style="width:18%; height:18%;" height:80px;></a> <br/>
