--- a/courses.html
+++ b/courses.html
@@ -156,8 +156,8 @@
                     <p style="text-indent:2em ">*Differential Privacy, Implementation and Application-DPLA</a><br/>
                     <p style="text-indent:2em ">*Secure Multi-party Computation, Implementation and Application-SMC</a><br/>
                     <p style="text-indent:2em ">*Lattice-based Cryptography, Implementation and Application (Post-Quantum Cryptography)-LBC</a><br/>
-		    <p style="text-indent:2em "><a href="The-Spring-Training-Camp.html">2020 Training Plan  </a>||<a href="2021 Training Plan.html">  2021 Training Plan</a><br/>
-		    <p style="text-indent:2em "><a href="2022 Training Plan.html">2022 Training Plan  </a>||<a href="2023 Training Plan.html">  2023 Training Plan</a></br>
+		    <p style="text-indent:2em "><a href="The-Spring-Training-Camp.html">2020 Training Plan  |</a><a href="2021 Training Plan.html">|  2021 Training Plan</a><br/>
+		    <p style="text-indent:2em "><a href="2022 Training Plan.html">2022 Training Plan  |</a><a href="2023 Training Plan.html">|  2023 Training Plan</a></br>
 		    </div> 
 <!-- 			    <hr> -->
 		    <div class="footer1 removeborder">
