--- a/courses.html
+++ b/courses.html
@@ -165,17 +165,18 @@
                     <p style="text-indent:2em ">*AI, Implementation, Application and Security-AIAS</a><br/> 
                     <p style="text-indent:2em ">*Blockchains, Implementation, Application and Security-BIAS</a><br/> 
 	            <p style="text-indent:2em ">*Secure and Privacy-preserving Computation, Implementation and Application-SPC</a><br/> 
-	            <p style="text-indent:2em "><a href="The-Summer-Training-Camp.html">2020 Training Plan</a>, <a href="2021 Training Plan.html">2021 Training Plan</a>, <a href="2022 Training Plan.html">2022 Training Plan</a><br/> 
-                    <!-- <p style="text-indent:2em ">*Trusted Computing<br/>  -->
-		    </div>
+	            <p style="text-indent:2em "><a href="The-Spring-Training-Camp.html">2020 Training Plan  |</a><a href="2021 Training Plan.html">|  2021 Training Plan</a><br/>
+		    <p style="text-indent:2em "><a href="2022 Training Plan.html">2022 Training Plan  |</a><a href="2023 Training Plan.html">|  2023 Training Plan</a></br>
+		    </div> 
 <!-- 			    <hr> -->
 		    <div class="footer2 removeborder">
                     <p style="text-align: center;font-size: 20px ">The Winter Training Camp</a><br/>
                     <p style="text-indent:2em ">*Advanced Topics in Cryptography, Implementation and Application-ATC</a><br/>
                     <p style="text-indent:2em ">*Fully Homomorphic Encryption, Implementation and Application-FHE</a><br/>
                     <p style="text-indent:2em ">*IoT, Implementation and Application-IoT</a><br/>
-                    <p style="text-indent:2em "><a href="The-Winter-Training-Camp.html">2020 Training Plan</a>, <a href="2021 Training Plan.html">2021 Training Plan</a>, <a href="2022 Training Plan.html">2022 Training Plan</a><br/>
-		    </div>
+                    <p style="text-indent:2em "><a href="The-Spring-Training-Camp.html">2020 Training Plan  |</a><a href="2021 Training Plan.html">|  2021 Training Plan</a><br/>
+		    <p style="text-indent:2em "><a href="2022 Training Plan.html">2022 Training Plan  |</a><a href="2023 Training Plan.html">|  2023 Training Plan</a></br>
+		    </div> 
                     <div class="footer3 removeborder">
 			    <p><a href="contact.html">Contact us</a></p>
                     </div>
