--- a/The-Summer-Training-Camp.html
+++ b/The-Summer-Training-Camp.html
@@ -112,9 +112,9 @@
             <div class="introdution">
                 <div id="theme">                    
 		    <div class="section1 removeborder">			 
-                    <p style="text-indent:2em ">*AI and Security (人工智能与安全课程)<a href="AI syllabus.html">AI and Security Syllabus(课程安排)</a> <a href="image/AIS Training Course Registration Form-培训课程注册登记表.doc" download="AIS Training Course Registration Form-培训课程注册登记表.doc">Registration Form(注册登记表)</a><br/>
-		    <p style="text-indent:2em ">*Blockchains and Applications (区块链及其应用课程)<a href="BL syllabus.html">Syllabus of Blockchains and Cryptocurrencies (课程安排)</a> <a href="image/BL Training Course Registration Form-培训课程注册登记表.doc" download="BL Training Course Registration Form-培训课程注册登记表.doc">Registration Form(注册表)</a><br/>
-		    <p style="text-indent:2em ">*Secure Computation (安全计算课程) <a href="SC syllabus.html">Syllabus of Secure Computation (课程安排)</a> <a href="image/SC Training Course Registration Form-培训课程注册登记表.doc" download="SC Training Course Registration Form-培训课程注册登记表.doc">Registration Form(注册表)</a><br/>
+                    <p style="text-indent:2em ">*AI, Implementation, Application and Security-AIAS<a href="AI syllabus.html">AI and Security Syllabus(课程安排)</a> <a href="image/AIS Training Course Registration Form-培训课程注册登记表.doc" download="AIS Training Course Registration Form-培训课程注册登记表.doc">Registration Form(注册登记表)</a><br/>
+		    <p style="text-indent:2em ">*Blockchains, Implementation, Application and Security-BIAS<a href="BL syllabus.html">Syllabus of Blockchains and Cryptocurrencies (课程安排)</a> <a href="image/BL Training Course Registration Form-培训课程注册登记表.doc" download="BL Training Course Registration Form-培训课程注册登记表.doc">Registration Form(注册表)</a><br/>
+		    <p style="text-indent:2em ">*Secure and Privacy-preserving Computation, Implementation and Application-SPC<a href="SC syllabus.html">Syllabus of Secure Computation (课程安排)</a> <a href="image/SC Training Course Registration Form-培训课程注册登记表.doc" download="SC Training Course Registration Form-培训课程注册登记表.doc">Registration Form(注册表)</a><br/>
                     </div>	
 			<div class="footer1 removeborder">
 			<p><a href="Register.html">Register</a></p>
