--- a/The-Winter-Training-Camp.html
+++ b/The-Winter-Training-Camp.html
@@ -112,8 +112,8 @@
             <div class="introdution">
                 <div id="theme">                    
 		    <div class="section1 removeborder">		
-          <p style="text-indent:2em ">*Advanced Topics in Cryptography (密码前沿课程)<a href="ATC syllabus.html">Syllabus of Advanced Topics in Cryptography (课程安排)</a> <a href="image/ATC Training Course Registration Form-培训课程注册登记表.doc" download="ATC Training Course Registration Form-培训课程注册登记表.doc">Registration Form(注册表)</a> <br/>
-          <p style="text-indent:2em ">*Fully Homomorphic Encryption and Implementation (全同态加密及其应用课程)<a href="FHE syllabus.html">FHE Syllabus(课程安排)</a> <a href="image/FHE Training Course Registration Form-培训课程注册登记表.doc" download="FHE Training Course Registration Form-培训课程注册登记表.doc">Registration Form(注册登记表)</a><br/>
+          <p style="text-indent:2em ">*Advanced Topics in Cryptography, Implementation and Application-ATC<a href="ATC syllabus.html">Syllabus of Advanced Topics in Cryptography (课程安排)</a> <a href="image/ATC Training Course Registration Form-培训课程注册登记表.doc" download="ATC Training Course Registration Form-培训课程注册登记表.doc">Registration Form(注册表)</a> <br/>
+          <p style="text-indent:2em ">*Fully Homomorphic Encryption, Implementation and Application-FHE<a href="FHE syllabus.html">FHE Syllabus(课程安排)</a> <a href="image/FHE Training Course Registration Form-培训课程注册登记表.doc" download="FHE Training Course Registration Form-培训课程注册登记表.doc">Registration Form(注册登记表)</a><br/>
                   </div>
 	<div class="footer1 removeborder">
 			<p><a href="Register.html">Register</a></p>
