--- a/The-Summer-Training-Camp.html
+++ b/The-Summer-Training-Camp.html
@@ -124,6 +124,7 @@
 		</div>
 		<div class="footer3 removeborder">
                 <p style="text-align:center"><strong>©2016 DFSC Center</strong></a><br/>
+		<p><a href="image/Conference and Training Camp Registration Form-注册登记表.doc">Registration Form</a></p>
 		</div>
         </div>
 <script type="text/javascript">
