--- a/The-Winter-Training-Camp.html
+++ b/The-Winter-Training-Camp.html
@@ -117,6 +117,7 @@
                   </div>
 	<div class="footer1 removeborder">
 			<p><a href="Register.html">Register</a></p>
+		        <p><a href="image/Conference and Training Camp Registration Form-注册登记表.doc">Registration Form</a></p>
 			</div>	
 	<div class="footer2 removeborder">
                 <p style="text-align:center"><img  src="image/DFSC CENTERlogo.png " style="width:18%; height:18%;" height:80px;></a> <br/>
