--- a/The-Spring-Training-Camp.html
+++ b/The-Spring-Training-Camp.html
@@ -122,11 +122,8 @@
 		    <p style="text-indent:2em "><a href="PQC syllabus.html">PQC syllabus(课程安排)</a><br/>
 		   </div>
 		    <div class="footer1 removeborder">
-			<p><a href="Register.html">Register</a></p>
-			 <p><a href="image/DP Training Course Registration Form-培训课程注册登记表.doc" download="DP Training Course Registration Form-培训课程注册登记表.doc">Registration Form(注册表)</a><br/>
-			 <p><a href="image/SMPC Training Course Registration Form-培训课程注册登记表.doc" download="SMPC Training Course Registration Form-培训课程注册登记表.doc">Registration Form(注册登记表)</a></p>
-			 <p><a href="image/PQC Training Course Registration Form-培训课程注册登记表.doc" download="PQC Training Course Registration Form-培训课程注册登记表.doc">Registration Form(注册登记表)</a></p>
-			<p><a href="image/Conference and Training Camp Registration Form-注册登记表.doc">Registration Form</a></p>
+			<p><a href="Register.html">Register</a></p>			 
+			<p><a href="image/Conference and Training Camp Registration Form-注册登记表.doc" download="Conference and Training Camp Registration Form-注册登记表.doc">Registration Form(注册登记表)</a></p>
 		  </div>
 		<div class="footer2 removeborder">
                 <p style="text-align:center"><img  src="image/DFSC CENTERlogo.png " style="width:18%; height:18%;" height:80px;></a> <br/>
