--- a/The-Spring-Training-Camp.html
+++ b/The-Spring-Training-Camp.html
@@ -44,6 +44,18 @@
 		border-style: groove;		
 		border-radius: 20px;
 		margin-top: 10px;
+		text-align: justify;
+/* 		border-color: skyblue; */
+	}
+	.section2 {
+	        background-color:aliceblue;
+	        color:black;
+	        clear:both;
+	        text-align:center;
+	        padding:5px; 
+		border-style: groove;		
+		border-radius: 20px;
+		margin-top: 10px;
 /* 		text-align: justify; */
 /* 		border-color: skyblue; */
 	}
@@ -117,7 +129,9 @@
                     <p style="text-indent:2em ">*Differential Privacy, Implementation and Application-DPLA<br/>      
 		    <p style="text-indent:2em ">*Secure Multi-party Computation, Implementation and Application-SMC <br/>
                     <p style="text-indent:2em ">*Lattice-based Cryptography, Implementation and Application (Post-Quantum Cryptography)-LBC<br/>
-		    <p style="text-indent:2em "><a href="DP syllabus.html">Syllabus(课程安排)</a><br/>
+		 </div>
+		<div class="section2 removeborder">	
+		   <p style="text-indent:2em "><a href="DP syllabus.html">Syllabus(课程安排)</a><br/>
 		    <p style="text-indent:2em "><a href="SMPC syllabus.html">SMPC Syllabus(课程安排)</a><br/>
 		    <p style="text-indent:2em "><a href="PQC syllabus.html">PQC syllabus(课程安排)</a><br/>
 		   </div>
